feat: referral by address, change branch, expandable history, UX improvements
